syntax = "proto3";

package chat;

option go_package = "chat-service/api/proto;proto";

// ChatService предоставляет методы для работы с чатами
service ChatService {
  // GetChatByID получает чат по ID
  rpc GetChatByID(GetChatByIDRequest) returns (GetChatByIDResponse);
  
  // CreateChat создает новый чат
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  
  // AddAdministratorForMigration добавляет администратора без валидации телефона (только для миграции)
  rpc AddAdministratorForMigration(AddAdministratorForMigrationRequest) returns (AddAdministratorForMigrationResponse);
}

message GetChatByIDRequest {
  int64 id = 1;
}

message GetChatByIDResponse {
  Chat chat = 1;
  string error = 2;
}

message CreateChatRequest {
  string name = 1;
  string url = 2;
  string max_chat_id = 3;
  string source = 4;
  int32 participants_count = 5;
  optional int64 university_id = 6;
  string department = 7;
}

message CreateChatResponse {
  Chat chat = 1;
  string error = 2;
}

message Chat {
  int64 id = 1;
  string name = 2;
  string url = 3;
  string max_chat_id = 4;
  int32 participants_count = 5;
  optional int64 university_id = 6;
  string department = 7;
  string source = 8;
  string created_at = 9;
  string updated_at = 10;
}

message AddAdministratorForMigrationRequest {
  int64 chat_id = 1;
  string phone = 2;
  string max_id = 3;
  bool add_user = 4;
  bool add_admin = 5;
}

message AddAdministratorForMigrationResponse {
  Administrator administrator = 1;
  string error = 2;
}

message Administrator {
  int64 id = 1;
  int64 chat_id = 2;
  string phone = 3;
  string max_id = 4;
  bool add_user = 5;
  bool add_admin = 6;
  string created_at = 7;
}

